--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ urls:
 # Edit these details
 
 author_logo: profile.png
-author: John Doe
+author: wclee
 author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
 author_email: "mail@sujaykundu.com"
 author_location: India
